--- a/index.html
+++ b/index.html
@@ -3,66 +3,99 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>AgriNexus 대화형 GPT 챗봇</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AgriNexus World | AI 기반 스마트농업 통합 플랫폼</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
-    body { font-family: Arial; background: #eef6f3; margin: 0; padding: 2rem; text-align: center; }
-    .chatbox { max-width: 700px; margin: auto; background: white; padding: 1rem; border-radius: 12px; box-shadow: 0 0 6px rgba(0,0,0,0.1); }
-    textarea, input, button { width: 100%; font-size: 1rem; margin-top: 1rem; padding: 0.8rem; border-radius: 6px; border: 1px solid #ccc; }
+    * { box-sizing: border-box; }
+    body { font-family: 'Inter', sans-serif; margin: 0; background: #f4f9f6; color: #1e3a34; }
+    header, footer { background: #007c4d; color: white; padding: 1rem 2rem; text-align: center; }
+    nav a { margin: 0 1rem; color: white; text-decoration: none; font-weight: bold; }
+    .section { max-width: 1000px; margin: 2rem auto; padding: 2rem; background: white; border-radius: 12px; box-shadow: 0 0 6px rgba(0,0,0,0.06); }
+    h1, h2 { text-align: center; }
+    button, input, textarea, select {
+      width: 100%; max-width: 600px; margin: 0.5rem auto; display: block;
+      padding: 1rem; font-size: 1rem; border-radius: 6px; border: 1px solid #ccc;
+    }
     button { background: #007c4d; color: white; border: none; cursor: pointer; }
-    .messages { text-align: left; margin-top: 2rem; max-height: 400px; overflow-y: auto; padding: 1rem; background: #f9fefc; border-radius: 8px; }
-    .msg { margin: 1rem 0; }
-    .user { font-weight: bold; color: #1e3a34; }
-    .assistant { color: #007c4d; }
+    .chart, .response, .workflow { margin-top: 1rem; background: #eef7f0; padding: 1rem; border-radius: 8px; }
   </style>
 </head>
 <body>
 
-  <div class="chatbox">
-    <h2>🌿 AgriNexus GPT 대화형 챗봇</h2>
-    <input id="apikey" placeholder="🔑 OpenAI API Key 입력" />
-    <div class="messages" id="chatlog"></div>
-    <textarea id="userInput" placeholder="메시지를 입력하세요..."></textarea>
-    <button onclick="sendMessage()">전송</button>
+<header>
+  <h1>AgriNexus World</h1>
+  <nav>
+    <a href="#login">로그인</a>
+    <a href="#gpt">GPT 상담</a>
+    <a href="#dashboard">대시보드</a>
+    <a href="#iot">IoT 제어</a>
+    <a href="#feedback">모델 피드백</a>
+  </nav>
+</header>
+
+<div class="section" id="login">
+  <h2>🔐 로그인 / 회원가입</h2>
+  <input placeholder="이메일" />
+  <input placeholder="비밀번호" type="password" />
+  <button>로그인</button>
+  <button>회원가입</button>
+</div>
+
+<div class="section" id="gpt">
+  <h2>🤖 GPT 스마트팜 상담</h2>
+  <input id="apikey" placeholder="🔑 OpenAI API Key 입력" />
+  <textarea id="gptInput" placeholder="GPT에게 물어보세요">스마트팜 설계</textarea>
+  <button onclick="simulateGPT()">GPT 실행</button>
+  <div class="response" id="gptOutput">GPT 응답이 여기에 표시됩니다.</div>
+</div>
+
+<div class="section" id="dashboard">
+  <h2>📊 통합 자동화 대시보드</h2>
+  <button onclick="simulateChart()">정책 실행 통계 보기</button>
+  <div class="chart" id="chartResult">Chart.js 시각화 데이터</div>
+</div>
+
+<div class="section" id="iot">
+  <h2>📡 IoT 명령 실행</h2>
+  <button onclick="simulateIoT('vent-open')">온실 환기</button>
+  <button onclick="simulateIoT('water-start')">관수 시작</button>
+  <div id="iotResult" class="response">IoT 상태 로그 출력</div>
+</div>
+
+<div class="section" id="feedback">
+  <h2>📈 모델 피드백 분석</h2>
+  <select><option>정확</option><option>부정확</option></select>
+  <input placeholder="모델 태그 입력 (예: corn-v1)" />
+  <button>피드백 제출</button>
+  <div class="chart">정확도 피드백 차트 표시 영역</div>
+</div>
+
+<div class="section" id="workflow">
+  <h2>🧠 전체 워크플로우 시각화</h2>
+  <div class="workflow">
+    알림 → 예측 → 승인 → IoT 제어 → 응답 → 보고서 → 메일 발송
   </div>
+</div>
 
-  <script>
-    const messages = [
-      { role: "system", content: "당신은 스마트팜 운영 전문가입니다. 질문에 친절하고 간결하게 한국어로 답해주세요." }
-    ];
+<footer>
+  <p>© 2024 AgriNexus World | AI 스마트농업 자동화 플랫폼</p>
+</footer>
 
-    async function sendMessage() {
-      const key = document.getElementById("apikey").value.trim();
-      const userText = document.getElementById("userInput").value;
-      if (!userText || !key) return;
+<script>
+function simulateGPT() {
+  const input = document.getElementById("gptInput").value;
+  document.getElementById("gptOutput").innerText = "🤖 GPT 응답 예시: '" + input + "' 에 대한 스마트팜 설계 가이드입니다.";
+}
 
-      messages.push({ role: "user", content: userText });
-      document.getElementById("userInput").value = "";
+function simulateChart() {
+  document.getElementById("chartResult").innerText = "정책 실행: 관수(3회), 환기(2회), 비료(1회)";
+}
 
-      const log = document.getElementById("chatlog");
-      log.innerHTML += `<div class='msg user'>🙋‍♂️ 사용자: ${userText}</div>`;
-      log.innerHTML += `<div class='msg assistant'>🤖 GPT 응답 중...</div>`;
-
-      const res = await fetch("https://api.openai.com/v1/chat/completions", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          "Authorization": "Bearer " + key
-        },
-        body: JSON.stringify({
-          model: "gpt-3.5-turbo",
-          messages: messages
-        })
-      });
-
-      const data = await res.json();
-      const reply = data.choices?.[0]?.message?.content || "❌ 응답 실패";
-      messages.push({ role: "assistant", content: reply });
-
-      log.innerHTML = log.innerHTML.replace("🤖 GPT 응답 중...", `🤖 GPT: ${reply}`);
-      log.scrollTop = log.scrollHeight;
-    }
-  </script>
+function simulateIoT(command) {
+  document.getElementById("iotResult").innerText = `📡 IoT 명령 전송됨: ${command}`;
+}
+</script>
 
 </body>
 </html>
