--- a/index.html
+++ b/index.html
@@ -3,96 +3,94 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>AgriNexus World | 통합 자동화 플랫폼</title>
+  <title>AgriNexus World | 사용자 중심 AI 스마트팜 플랫폼</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Arial; background: #f0f6f4; margin: 0; padding: 2rem; text-align: center; }
-    h2 { margin-bottom: 0.5rem; }
-    .section { max-width: 800px; margin: 1.5rem auto; background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 0 6px rgba(0,0,0,0.05); }
-    .toggle { background: #007c4d; color: white; padding: 0.8rem 1.2rem; border: none; border-radius: 6px; cursor: pointer; margin: 1rem 0; }
-    .content { display: none; margin-top: 1rem; animation: fadeIn 0.5s ease-in-out; }
-    input, button, textarea, select {
-      width: 90%; max-width: 500px; margin: 0.5rem auto; font-size: 1rem;
-      padding: 0.8rem; border-radius: 6px; border: 1px solid #ccc; display: block;
+    body { margin: 0; font-family: 'Inter', sans-serif; background: #f3faf7; color: #1e3a34; }
+    header { background: #007c4d; padding: 1rem 2rem; color: white; display: flex; justify-content: space-between; align-items: center; }
+    nav a { color: white; margin: 0 1rem; text-decoration: none; font-weight: 600; }
+    .hero { text-align: center; padding: 4rem 2rem; background: linear-gradient(to right, #e9fdf0, #d2f9e3); }
+    .hero h1 { font-size: 2.5rem; margin-bottom: 1rem; }
+    .hero p { font-size: 1.1rem; margin-bottom: 2rem; }
+    .hero button { background: #007c4d; color: white; border: none; padding: 1rem 2rem; border-radius: 6px; font-size: 1rem; }
+    .features { display: flex; flex-wrap: wrap; justify-content: center; padding: 2rem; background: #fff; }
+    .feature { width: 300px; margin: 1rem; background: #f0f9f4; padding: 1.5rem; border-radius: 10px; text-align: left; }
+    .feature h3 { margin-top: 0; color: #007c4d; }
+    .feature button { margin-top: 1rem; background: #007c4d; color: white; border: none; padding: 0.8rem 1rem; border-radius: 6px; }
+    .workflow { background: #eefaf2; padding: 2rem; text-align: center; }
+    footer { background: #1e3a34; color: white; padding: 2rem; font-size: 0.9rem; text-align: center; }
+    @media (max-width: 600px) {
+      .features { flex-direction: column; align-items: center; }
     }
-    .result { margin-top: 1rem; background: #e8f6ef; padding: 1rem; border-radius: 6px; min-height: 50px; }
-    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
   </style>
 </head>
 <body>
 
-  <h1>🌍 AgriNexus World | AI 기반 스마트농업 자동화 플랫폼</h1>
+<header>
+  <h2>AgriNexus World</h2>
+  <nav>
+    <a href="#features">기능 소개</a>
+    <a href="#workflow">워크플로우</a>
+    <a href="#contact">문의</a>
+  </nav>
+</header>
 
-  <div class="section">
-    <button class="toggle" onclick="toggleContent('login')">🔐 로그인 / 회원가입</button>
-    <div id="login" class="content">
-      <input placeholder="이메일" />
-      <input placeholder="비밀번호" type="password" />
-      <button>로그인</button>
-      <button>회원가입</button>
-    </div>
+<section class="hero">
+  <h1>사용자 중심의 AI 스마트농업 자동화 플랫폼</h1>
+  <p>이제 누구나 클릭 한 번으로 정책 실행, IoT 제어, AI 분석, 보고서 생성까지 모두 자동화하세요</p>
+  <button onclick="scrollToSection()">서비스 시작하기</button>
+</section>
+
+<section class="features" id="features">
+  <div class="feature">
+    <h3>🤖 GPT 스마트 상담</h3>
+    <p>스마트팜, 자동화, 투자 전략 등 질문하세요. GPT가 바로 응답합니다.</p>
+    <button>GPT 실행</button>
   </div>
-
-  <div class="section">
-    <button class="toggle" onclick="toggleContent('gpt')">🤖 GPT 스마트팜 상담</button>
-    <div id="gpt" class="content">
-      <input placeholder="OpenAI API Key (sk-...)" />
-      <textarea placeholder="예: 스마트팜 설계">스마트팜 설계</textarea>
-      <button>GPT 실행</button>
-      <div class="result">GPT 응답이 표시됩니다.</div>
-    </div>
+  <div class="feature">
+    <h3>📊 정책 실행 대시보드</h3>
+    <p>자동화 정책 큐 처리, 실행 우선순위에 따라 IoT 명령 자동 전송</p>
+    <button>실행 큐 보기</button>
   </div>
-
-  <div class="section">
-    <button class="toggle" onclick="toggleContent('dashboard')">📊 통합 대시보드</button>
-    <div id="dashboard" class="content">
-      <button>정책 통계 보기</button>
-      <div class="result">정책 실행 통계 출력</div>
-    </div>
+  <div class="feature">
+    <h3>📡 IoT 실시간 제어</h3>
+    <p>온실 환기, 관수 시작, 상태 모니터링을 실시간으로 확인하고 제어합니다.</p>
+    <button>IoT 연결</button>
   </div>
-
-  <div class="section">
-    <button class="toggle" onclick="toggleContent('iot')">📡 IoT 명령 실행</button>
-    <div id="iot" class="content">
-      <button>온실 환기</button>
-      <button>관수 시작</button>
-      <div class="result">IoT 응답 로그</div>
-    </div>
+  <div class="feature">
+    <h3>📈 모델 피드백 + 분석</h3>
+    <p>AI 예측 정확도 피드백을 수집하여 모델 성능을 자동 개선합니다.</p>
+    <button>정확도 분석</button>
   </div>
-
-  <div class="section">
-    <button class="toggle" onclick="toggleContent('feedback')">📈 모델 피드백 분석</button>
-    <div id="feedback" class="content">
-      <select><option>정확</option><option>부정확</option></select>
-      <input placeholder="모델 태그 (예: corn-v1)" />
-      <button>피드백 제출</button>
-      <div class="result">정확도 통계 차트 표시</div>
-    </div>
+  <div class="feature">
+    <h3>📄 PDF 보고서 + 메일</h3>
+    <p>자동 생성된 요약 보고서를 PDF로 만들고 관리자에게 자동 발송합니다.</p>
+    <button>보고서 보기</button>
   </div>
-
-  <div class="section">
-    <button class="toggle" onclick="toggleContent('report')">📄 관리자 보고서 + PDF 발송</button>
-    <div id="report" class="content">
-      <textarea placeholder="승인 요약 내용"></textarea>
-      <input placeholder="📧 관리자 이메일" />
-      <button>PDF 생성 및 메일 전송</button>
-      <div class="result">메일 발송 완료</div>
-    </div>
+  <div class="feature">
+    <h3>📩 Slack/Twilio 알림</h3>
+    <p>실행 결과를 Slack 메시지, SMS로 실시간 전송</p>
+    <button>알림 확인</button>
   </div>
+</section>
 
-  <div class="section">
-    <button class="toggle" onclick="toggleContent('workflow')">🧠 전체 자동화 워크플로우</button>
-    <div id="workflow" class="content">
-      <div class="result">알림 → 예측 → 승인 → IoT → 보고서 → 메일 발송</div>
-    </div>
-  </div>
+<section class="workflow" id="workflow">
+  <h2>💡 전체 스마트 워크플로우</h2>
+  <p>알림 ➜ 예측 ➜ 승인 ➜ IoT 실행 ➜ 응답 기록 ➜ PDF 생성 ➜ 메일 발송</p>
+  <p>모든 단계가 자동으로 연결되어 작동합니다.</p>
+</section>
 
-  <script>
-    function toggleContent(id) {
-      const target = document.getElementById(id);
-      target.style.display = target.style.display === "block" ? "none" : "block";
-    }
-  </script>
+<footer id="contact">
+  <p>© 2024 AgriNexus World | AI 스마트농업 자동화 플랫폼</p>
+  <p>문의: admin@agrinexus.world</p>
+</footer>
+
+<script>
+function scrollToSection() {
+  document.getElementById("features").scrollIntoView({ behavior: "smooth" });
+}
+</script>
 
 </body>
 </html>
