--- a/index.html
+++ b/index.html
@@ -3,89 +3,115 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>AgriNexus Global | AI 스마트농업 플랫폼</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>AgriNexus | AI 스마트농업 인터랙티브 플랫폼</title>
   <style>
-    body { font-family: Arial; margin: 0; background: #f6fbf8; color: #1e3a34; }
+    body { font-family: Arial, sans-serif; margin: 0; background: #f3f9f6; color: #1e3a34; }
     header { background: #007c4d; color: white; padding: 1rem 2rem; text-align: center; }
-    nav { background: #1e3a34; color: white; text-align: center; padding: 0.5rem; }
-    nav button { margin: 0 0.5rem; padding: 0.5rem 1rem; background: white; color: #007c4d; border: none; border-radius: 6px; cursor: pointer; }
-    section { max-width: 1000px; margin: 2rem auto; padding: 2rem; background: white; border-radius: 10px; box-shadow: 0 0 6px rgba(0,0,0,0.05); }
-    h1, h2 { text-align: center; }
-    button, input, textarea, select {
-      width: 90%; max-width: 500px; padding: 0.8rem; font-size: 1rem;
-      margin: 0.5rem auto; display: block; border-radius: 6px; border: 1px solid #ccc;
+    nav { background: #1e3a34; padding: 0.5rem; text-align: center; }
+    nav a { margin: 0 0.7rem; color: white; text-decoration: none; font-weight: bold; }
+    .container { max-width: 1100px; margin: auto; padding: 2rem; }
+    .card { background: white; margin: 1rem 0; padding: 1.5rem; border-radius: 10px; box-shadow: 0 0 6px rgba(0,0,0,0.04); }
+    h2 { margin-top: 0; }
+    button { padding: 0.7rem 1.2rem; font-size: 1rem; border: none; border-radius: 6px; background: #007c4d; color: white; cursor: pointer; }
+    .hidden { display: none; margin-top: 1rem; }
+    input, textarea, select {
+      display: block; width: 90%; margin: 0.5rem auto; padding: 0.8rem; font-size: 1rem; border: 1px solid #ccc; border-radius: 6px;
     }
-    .lang { margin: 0.5rem auto; text-align: center; }
-    .lang select { padding: 0.5rem; }
-    .dashboard { display: none; }
-    footer { background: #1e3a34; color: white; text-align: center; padding: 2rem; margin-top: 3rem; font-size: 0.9rem; }
+    footer { background: #1e3a34; color: white; text-align: center; padding: 2rem; margin-top: 2rem; font-size: 0.9rem; }
   </style>
 </head>
 <body>
 
 <header>
-  <h1>🌎 AgriNexus Global Platform</h1>
-  <div class="lang">
-    <label>🌐 Language:
-      <select onchange="setLang(this.value)">
-        <option value="ko">한국어</option>
-        <option value="en">English</option>
-        <option value="ja">日本語</option>
-        <option value="zh">中文</option>
-      </select>
-    </label>
-  </div>
+  <h1>AgriNexus World</h1>
+  <p>AI 스마트농업 자동화 플랫폼</p>
 </header>
 
 <nav>
-  <button onclick="toggleDash('user')">👤 사용자 대시보드</button>
-  <button onclick="toggleDash('admin')">🔒 관리자 전용</button>
+  <a href="#gpt">GPT</a>
+  <a href="#policy">정책 실행</a>
+  <a href="#iot">IoT</a>
+  <a href="#feedback">피드백</a>
+  <a href="#report">보고서</a>
+  <a href="#workflow">워크플로우</a>
 </nav>
 
-<section class="dashboard" id="user">
-  <h2>👤 사용자 대시보드</h2>
-  <textarea placeholder="GPT에게 농업 질문 입력">AI로 스마트팜 설계를 도와줘</textarea>
-  <button>GPT 응답 받기</button>
-  <select><option>corn-v1</option><option>rice-v1</option></select>
-  <button>AI 예측 실행</button>
-</section>
+<div class="container">
 
-<section class="dashboard" id="admin">
-  <h2>🔒 관리자 전용 대시보드</h2>
-  <button>정책 큐 처리</button>
-  <textarea placeholder="실행 정책 내용 입력"></textarea>
-  <button>IoT 명령 전송</button>
-  <button>PDF 보고서 메일 발송</button>
-  <select><option>정확</option><option>부정확</option></select>
-  <input placeholder="모델 태그 입력 (예: corn-v1)" />
-  <button>모델 피드백 제출</button>
-</section>
+  <div class="card" id="gpt">
+    <h2>🤖 GPT 스마트팜 상담</h2>
+    <button onclick="toggle('gptPanel')">GPT 실행</button>
+    <div class="hidden" id="gptPanel">
+      <input placeholder="API Key 입력" />
+      <textarea placeholder="질문 입력">스마트팜 설계</textarea>
+      <button>질문 보내기</button>
+      <div>GPT 응답 영역</div>
+    </div>
+  </div>
 
-<section>
-  <h2>🛰️ 세계 유일 AgriNexus 자동화 기능</h2>
-  <ul>
-    <li>🌍 국가별 기후 기반 작물 예측</li>
-    <li>📍 GPS/위성 기반 IoT 위치 지도</li>
-    <li>📡 실시간 IoT 응답 로그 시각화</li>
-    <li>📘 정책 실행 워크플로우 트리 시각화</li>
-    <li>🧠 GPT 정책 요약 자동 생성 및 Slack/SMS 전송</li>
-  </ul>
-</section>
+  <div class="card" id="policy">
+    <h2>📊 정책 실행 대시보드</h2>
+    <button onclick="toggle('policyPanel')">실행 보기</button>
+    <div class="hidden" id="policyPanel">
+      <textarea placeholder="실행할 정책 입력"></textarea>
+      <select><option>1순위</option><option>2순위</option></select>
+      <button>정책 큐 추가</button>
+      <button>정책 큐 실행</button>
+      <div>정책 실행 로그</div>
+    </div>
+  </div>
+
+  <div class="card" id="iot">
+    <h2>📡 IoT 제어 센터</h2>
+    <button onclick="toggle('iotPanel')">제어 열기</button>
+    <div class="hidden" id="iotPanel">
+      <button>환기 시작</button>
+      <button>관수 시작</button>
+      <div>IoT 응답 로그</div>
+    </div>
+  </div>
+
+  <div class="card" id="feedback">
+    <h2>📈 모델 피드백 분석</h2>
+    <button onclick="toggle('feedbackPanel')">정확도 평가</button>
+    <div class="hidden" id="feedbackPanel">
+      <select><option>정확</option><option>부정확</option></select>
+      <input placeholder="모델 태그 (예: corn-v1)" />
+      <button>제출</button>
+      <div>정확도 분석 차트</div>
+    </div>
+  </div>
+
+  <div class="card" id="report">
+    <h2>📄 PDF 보고서 + 메일 전송</h2>
+    <button onclick="toggle('reportPanel')">보고서 보기</button>
+    <div class="hidden" id="reportPanel">
+      <textarea placeholder="보고서 내용"></textarea>
+      <input placeholder="이메일 입력" />
+      <button>PDF 생성 및 전송</button>
+      <div>메일 전송 로그</div>
+    </div>
+  </div>
+
+  <div class="card" id="workflow">
+    <h2>🧠 전체 자동화 워크플로우 시각화</h2>
+    <button onclick="toggle('workflowPanel')">워크플로우 펼치기</button>
+    <div class="hidden" id="workflowPanel">
+      <p>알림 ➝ 예측 ➝ 승인 ➝ IoT 제어 ➝ 실행 기록 ➝ 보고서 생성 ➝ 메일 전송</p>
+    </div>
+  </div>
+
+</div>
 
 <footer>
-  <p>© 2024 AgriNexus World | GPT 기반 스마트농업 자동화 플랫폼</p>
-  <p>Contact: admin@agrinexus.world</p>
+  <p>© 2024 AgriNexus World | AI 스마트농업 자동화 플랫폼</p>
 </footer>
 
 <script>
-function toggleDash(role) {
-  document.querySelectorAll(".dashboard").forEach(div => div.style.display = "none");
-  document.getElementById(role).style.display = "block";
-}
-
-function setLang(lang) {
-  alert("🌐 언어가 변경됩니다: " + lang + " (실제 번역 연동은 추가 구현 필요)");
+function toggle(id) {
+  const el = document.getElementById(id);
+  el.classList.toggle("hidden");
 }
 </script>
 
