--- a/index.html
+++ b/index.html
@@ -3,95 +3,36 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>AgriNexus World | 실시간 AI 스마트농업 플랫폼</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <title>AgriNexus GPT 플랫폼 (프록시 연동)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
-    body { font-family: Arial; background: #f0f8f5; margin: 0; padding: 2rem; color: #1e3a34; text-align: center; }
-    h1 { color: #007c4d; }
-    .section { max-width: 800px; margin: 2rem auto; background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 0 8px rgba(0,0,0,0.05); }
-    input, textarea, button { width: 90%; max-width: 600px; margin: 0.5rem auto; padding: 1rem; border-radius: 6px; border: 1px solid #ccc; font-size: 1rem; display: block; }
+    body { font-family: Arial; background: #f5faf7; padding: 2rem; color: #1e3a34; text-align: center; }
+    input, textarea, button {
+      width: 90%; max-width: 600px; padding: 1rem; margin: 0.5rem auto; display: block;
+      font-size: 1rem; border: 1px solid #ccc; border-radius: 6px;
+    }
     button { background: #007c4d; color: white; border: none; cursor: pointer; }
-    .result { margin-top: 1rem; background: #e8f6ef; padding: 1rem; border-radius: 6px; min-height: 60px; }
+    .response { margin-top: 1rem; padding: 1rem; background: #eaf7f1; border-radius: 6px; min-height: 100px; }
   </style>
 </head>
 <body>
 
-<h1>AgriNexus World</h1>
-<p>실시간 작동형 AI 스마트농업 자동화 플랫폼</p>
-
-<div class="section">
-  <h2>🤖 GPT 스마트팜 상담</h2>
-  <textarea id="gptPrompt">스마트팜 설계</textarea>
-  <button onclick="callGPT()">GPT 실행</button>
-  <div class="result" id="gptResponse">GPT 응답 출력</div>
-</div>
-
-<div class="section">
-  <h2>📡 IoT 명령 제어</h2>
-  <button onclick="sendIoT('vent')">온실 환기</button>
-  <button onclick="sendIoT('water')">관수 시작</button>
-  <div class="result" id="iotResult">IoT 실행 로그</div>
-</div>
-
-<div class="section">
-  <h2>📄 PDF 보고서 생성 + 관리자 이메일 전송</h2>
-  <textarea id="reportText">정책 실행 보고서 요약 내용</textarea>
-  <input id="adminEmail" placeholder="관리자 이메일 입력" />
-  <button onclick="sendPDF()">PDF 생성 및 전송</button>
-  <div class="result" id="reportStatus">PDF 상태</div>
-</div>
+<h2>🌱 AgriNexus 전용 GPT 상담</h2>
+<textarea id="prompt">스마트팜 설계</textarea>
+<button onclick="askGPT()">GPT 실행</button>
+<div class="response" id="gptResponse">GPT 응답이 여기에 표시됩니다.</div>
 
 <script>
-  async function callGPT() {
-    const prompt = document.getElementById("gptPrompt").value;
-    document.getElementById("gptResponse").innerText = "GPT 응답 생성 중...";
-    const res = await fetch("https://api.openai.com/v1/chat/completions", {
-      method: "POST",
-      headers: {
-        "Authorization": "Bearer sk-YourSharedAPIKeyHere",
-        "Content-Type": "application/json"
-      },
-      body: JSON.stringify({
-        model: "gpt-3.5-turbo",
-        messages: [{ role: "user", content: prompt }]
-      })
-    });
-    const data = await res.json();
-    const reply = data.choices?.[0]?.message?.content || "❌ GPT 응답 실패";
-    document.getElementById("gptResponse").innerText = reply;
-  }
-
-  function sendIoT(command) {
-    document.getElementById("iotResult").innerText = `📡 IoT 명령 전송됨: ${command}`;
-    fetch("https://iot-server.example.com/control", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ command })
-    });
-  }
-
-  async function sendPDF() {
-    const { jsPDF } = window.jspdf;
-    const content = document.getElementById("reportText").value;
-    const email = document.getElementById("adminEmail").value;
-    const doc = new jsPDF();
-    doc.text("AgriNexus 정책 보고서", 20, 20);
-    doc.text("내용: " + content, 20, 40);
-    doc.text("시간: " + new Date().toLocaleString(), 20, 60);
-    const blob = doc.output("blob");
-
-    const form = new FormData();
-    form.append("pdf", blob, "report.pdf");
-    form.append("email", email);
-
-    await fetch("https://your-server.com/send-summary", {
-      method: "POST",
-      body: form
-    });
-
-    document.getElementById("reportStatus").innerText = "📩 관리자에게 PDF 전송 완료!";
-  }
+async function askGPT() {
+  const prompt = document.getElementById("prompt").value;
+  const res = await fetch("/gpt", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ prompt })
+  });
+  const data = await res.json();
+  document.getElementById("gptResponse").innerText = data.reply || "❌ 오류 발생";
+}
 </script>
 
 </body>
